Fixed css to align the top bar properly

--- a/web/resources/css/global.css
+++ b/web/resources/css/global.css
@@ -189,3 +189,11 @@ input#img-6:checked ~ .nav-dots label#img-dot-6 {
     cursor:pointer;
     opacity: 1.0;
  }
+
+ .rightAlign {
+    text-align: right;
+}
+
+ .leftAlign {
+    text-align: left;
+}
